--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <canvas id="canvas" width="700" height="700"></canvas>
     <script defer src="scripts/maze.js"></script>
 </body>
-
+<script>
+</script>
 </html>
