change maze complexity, align, add title and header

--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maze</title>
+    <!-- <style></style> -->
     <script src="scripts/maze.js"></script>
 </head>
 
 <body>
+    <h1>Maze-online</h1>
     <pre id="out"></pre>
-</body>
 
+</body>
+<footer>
+        <i>Original work Copyright (c) 2012 [Acme Corp]</i>
+</footer>
 </html>
+<style>
+    body{
+        text-align: center;
+    }
+</style>
 <script type="text/javascript">
     /* ABOVE CODE GOES HERE */
-    document.getElementById('out').innerHTML = display(maze(8, 11)); 
+    document.getElementById('out').innerHTML = display(maze(20, 23)); 
 </script>
 
 </html>
