--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </body>
 <footer>
-        <i>Original work Copyright (c) 2012 [Acme Corp]</i>
+        <i>Original work Copyright (c) 2012 [KagaJr Corp]</i>
 </footer>
 </html>
 <style>
