--- a/index.html
+++ b/index.html
@@ -5,17 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maze</title>
-    <!-- <style></style> -->
+    <link rel="stylesheet" href="style/style.css">
     <script src="scripts/maze.js"></script>
 </head>
 
 <body>
-    <h1>Maze-online</h1>
-    <pre id="out"></pre>
+    <div class="game-option">
+        <div class="game-option-list">
 
+        </div>
+        <div class="game-start">
+
+        </div>
+        <div class="game-helper">
+
+        </div>
+    </div>
+    <div class="game-container">
+        <div class="game-desc">
+            <h1>Maze-online</h1>
+        </div>
+        <div class="game-panel">
+            <pre id="out"></pre>
+        </div>
+    </div>
+    <div class="game-leaderboard">
+        <div class="leaderboard-panel">
+
+        </div>
+        <div class="user-score">
+
+        </div>
+    </div>
+    <div class="recommendation">
+        <div class="rec-panel">
+
+        </div>
+        <div class="ads-panel">
+
+        </div>
+    </div>
 </body>
-<footer>
+<footer class="footer-promo">
+    <div class="footer-list">
         <i>Original work Copyright (c) 2012 [KagaJr Corp]</i>
+    </div>
 </footer>
 </html>
 <style>
