--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Maze</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="shortcut icon" href="img/icons/favicon.ico" type="image/x-icon">
     <script src="scripts/maze.js"></script>
 </head>
 
@@ -48,7 +49,13 @@
 </body>
 <footer class="footer-promo">
     <div class="footer-list">
-        <i>Original work Copyright (c) 2012 [KagaJr Corp]</i>
+        <div class="footer-version">
+            <img class="footer-version-ico" src="img/icons/favicon-32x32.png" alt="maze-online">
+            <p class="footer-version-link">Maze-online version 1.0</p>
+        </div>
+        <div class="footer-copyright">
+            <p class="footer-copyright-text">Original work Copyright (c) 2012 [KagaJr Corp]</p>
+        </div>
     </div>
 </footer>
 </html>
